logs/dag_id=currency_parsing_rub/run_id=manual__2024-04-20T120934.395966+0000/task_id=create_schema/attempt=2.log
[2024-04-20T12:14:39.941+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: currency_parsing_rub.create_schema manual__2024-04-20T12:09:34.395966+00:00 [queued]>
[2024-04-20T12:14:39.965+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: currency_parsing_rub.create_schema manual__2024-04-20T12:09:34.395966+00:00 [queued]>
[2024-04-20T12:14:39.972+0000] {taskinstance.py:2193} INFO - Starting attempt 2 of 2
[2024-04-20T12:14:40.004+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_schema> on 2024-04-20 12:09:34.395966+00:00
[2024-04-20T12:14:40.011+0000] {standard_task_runner.py:60} INFO - Started process 203 to run task
[2024-04-20T12:14:40.019+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'currency_parsing_rub', 'create_schema', 'manual__2024-04-20T12:09:34.395966+00:00', '--job-id', '799', '--raw', '--subdir', 'DAGS_FOLDER/stage/currency_rub.py', '--cfg-path', '/tmp/tmp0w0lg7il']
[2024-04-20T12:14:40.021+0000] {standard_task_runner.py:88} INFO - Job 799: Subtask create_schema
[2024-04-20T12:14:40.136+0000] {task_command.py:423} INFO - Running <TaskInstance: currency_parsing_rub.create_schema manual__2024-04-20T12:09:34.395966+00:00 [running]> on host b6a424c1134c
[2024-04-20T12:14:40.290+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='currency_parsing_rub' AIRFLOW_CTX_TASK_ID='create_schema' AIRFLOW_CTX_EXECUTION_DATE='2024-04-20T12:09:34.395966+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-20T12:09:34.395966+00:00'
[2024-04-20T12:14:40.292+0000] {sql.py:276} INFO - Executing: dags/scripts/create_schemas.sql
[2024-04-20T12:14:40.306+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-20T12:14:40.320+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-20T12:14:40.326+0000] {sql.py:457} INFO - Running statement: dags/scripts/create_schemas.sql , parameters: None
[2024-04-20T12:14:40.328+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "dags"
LINE 1: dags/scripts/create_schemas.sql
        ^

[2024-04-20T12:14:40.345+0000] {taskinstance.py:1149} INFO - Marking task as FAILED. dag_id=currency_parsing_rub, task_id=create_schema, execution_date=20240420T120934, start_date=20240420T121439, end_date=20240420T121440
[2024-04-20T12:14:40.373+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 799 for task create_schema (syntax error at or near "dags"
LINE 1: dags/scripts/create_schemas.sql
        ^
; 203)
[2024-04-20T12:14:40.392+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-20T12:14:40.413+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-20T12:14:40.449+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
